tests/golden/errors/line_too_long.kso
print "this string pads the line out well past the canonical width limit of eighty"
