tests/golden/errors/line_too_long.stderr
error[formatting]: a line holds at most 80 characters — this one has 83
  --> line_too_long.kso:1:81
   1 | print "this string pads the line out well past the canonical width limit of eighty"
                                                                                       ^
